Improve Paper dimension/world handling code a bit